--- a/site/_sass/_navbar.sass
+++ b/site/_sass/_navbar.sass
@@ -1,2 +1,10 @@
+.bk-topnav
+  position: sticky
+  top: 0
+  left: 0
+  right: 0
+  display: block
 
-    
+  .navbar-brand a
+    font-size: 120%
+    margin-right: 2rem
