--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -11,11 +11,8 @@ $fa-font-path: "../fonts"
 @import typography
 @import vendor/bulma/bulma
 
-
-
-.navbar-brand a
-  font-size: 120%
-  margin-right: 2rem
+.bk-twitter span
+  color: $twitter-blue
 
 img.logo
   height: 3rem
