--- a/site/_sass/_variables.sass
+++ b/site/_sass/_variables.sass
@@ -11,13 +11,15 @@ $em-right-margin: 0.2rem
 $tan: #c88e56
 $blue: #1976d2
 $primary: $tan
+$twitter-blue: #4099ff
+$almost-black: rgb(35, 41, 55)
 
 $family-sans-serif: 'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $family-monospace: 'Source Code Pro', monospace
 
 $sx-border-radius: .25rem
 $sx-border: none
-$sx-bg-color: rgb(35, 41, 55)
+$sx-bg-color: $almost-black
 $sx-light-gray: lighten(#93a1a1, 15%)
 $sx-dark-gray: lighten(#657b83, 30%)
 $sx-olive: #859900
