--- a/site/_layouts/docs.html
+++ b/site/_layouts/docs.html
@@ -32,7 +32,7 @@ layout: default
         <hr />
 
         <div class="content is-medium">
-          <section class="bk-docs-content">
+          <section class="bk-main-content">
             {{ content }}
           </section>
 
