tighten up sidebar nav

--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -146,16 +146,16 @@ aside.sidebar
   overflow-y: scroll
   bottom: 0
   top: $navbar-height + 3rem
-  padding: 0 0 $footer-height * 1.1 0
+  padding: 0 0 5% 0
 
   p + ul.sidebar-items
-    margin-top: .8rem
+    margin-top: .2rem
 
   ul.sidebar-items
     margin-bottom: 1rem
 
     li
-      padding: .25rem 0 .25rem 1rem
+      padding: .2rem 0 .2rem 1rem
       font-size: 1rem
       width: 100%
 
