eliminate top margin for mobile

--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -11,6 +11,10 @@ $fa-font-path: "../fonts"
 @import typography
 @import vendor/bulma/bulma
 
+@media (max-width: 767px)
+  .bk-docs-container
+    margin-top: 0 !important
+
 @media (min-width: 768px)
   .bk-docs-container .bk-docs-block
     padding: 0 3rem !important
