some more concepts cleanup and addition of simple ledger api example

--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -13,11 +13,11 @@ $fa-font-path: "../fonts"
 
 @media (max-width: 767px)
   .bk-docs-container
-    margin-top: 0 !important
+    margin-top: 1rem !important
 
 @media (min-width: 768px)
   .bk-docs-container .bk-docs-block
-    padding: 0 3rem !important
+    padding: 0 5% !important
 
 .bk-twitter span
   color: $twitter-blue
@@ -66,10 +66,11 @@ footer.footer
 .toc
   overflow-y: scroll
   bottom: 0
-  top: $navbar-height + 3rem
+  top: $navbar-height + 5rem
   $toc-base-font-size: 1.2rem
   position: fixed
   max-width: 20rem
+  padding: 0 0 5% 0
 
   .section-nav
     .toc-entry
@@ -147,7 +148,7 @@ aside.sidebar
   position: fixed
   overflow-y: scroll
   bottom: 0
-  top: $navbar-height + 3rem
+  top: $navbar-height + 5rem
   padding: 0 0 5% 0
 
   p + ul.sidebar-items
