--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -11,6 +11,15 @@ $fa-font-path: "../fonts"
 @import typography
 @import vendor/bulma/bulma
 
+span.bk-javadoc-icon
+  margin-right: .5rem
+
+span.tag
+  margin-left: 1em
+
+nav.pagination
+  margin-top: 5rem
+
 @media (max-width: 767px)
   .bk-docs-container
     margin-top: 1rem !important
@@ -21,9 +30,6 @@ $fa-font-path: "../fonts"
 
 .bk-twitter span
   color: $twitter-blue
-
-img.logo
-  height: 3rem
 
 em
   margin-right: $em-right-margin
