fix dropdown transparency issue

--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -146,7 +146,7 @@ h2.bk-subtitle
   .bk-main-content
     min-height: 70vh
 
-.bk-community-container .container
+.bk-community-container
   width: 60%
 
 aside.sidebar
