--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -11,6 +11,10 @@ $fa-font-path: "../fonts"
 @import typography
 @import vendor/bulma/bulma
 
+.navbar-dropdown
+  .navbar-item
+    font-size: 1.2rem
+
 span.bk-javadoc-icon
   margin-right: .5rem
 
