--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -11,6 +11,12 @@ $fa-font-path: "../fonts"
 @import typography
 @import vendor/bulma/bulma
 
+.bk-level
+  height: 4rem
+
+  img
+    height: 4rem
+
 .navbar-dropdown
   .navbar-item
     font-size: 1.2rem
