--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -33,13 +33,14 @@
           <a class="navbar-link">Documentation</a>
           <div class="navbar-dropdown is-boxed">
             {% for version in site.versions %}
-            <a class="navbar-item" href="{{ site.baseurl }}project/who">
+            <a class="navbar-item" href="{{ site.baseurl }}docs/getting-started/installation">
               Version {{version}}
               {% if version == site.latest %}<span class="tag is-success">LATEST</span>{% endif %}
             </a>
             {% endfor %}
+            <hr class="dropdown-divider">
             <a class="navbar-item" href="{{ site.baseurl }}javadoc">
-              <span class="icon">
+              <span class="icon bk-javadoc-icon">
                 <img src="{{ site.baseurl }}img/java-icon.svg">
               </span>
               Javadoc
