--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -11,15 +11,14 @@ $fa-font-path: "../fonts"
 @import typography
 @import vendor/bulma/bulma
 
+img.bk-javadoc-icon
+  margin-right: 1.5rem
+
 .bk-level
   height: 4rem
 
   img
     height: 4rem
-
-.navbar-dropdown
-  .navbar-item
-    font-size: 1.2rem
 
 span.bk-javadoc-icon
   margin-right: .5rem
