--- a/site/_sass/_syntax.sass
+++ b/site/_sass/_syntax.sass
@@ -1,5 +1,6 @@
 blockquote
   code
+    font-size: 1.1rem
     background-color: lighten($sx-light-gray, 30%)
 
 .highlighter-rouge
@@ -22,6 +23,8 @@ blockquote
     overflow: $sx-overflow
 
     code
+      font-size: .9rem
+
       .w
         color: $sx-light-gray
         background-color: $sx-bg-color
