Issue 333: [website] add bookkeeper slack channel to README.md and website

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -52,7 +52,7 @@
           <a class="navbar-link">Community</a>
           <div class="navbar-dropdown is-boxed">
             <a class="navbar-item" href="{{ site.baseurl }}community/mailing-lists">Mailing lists</a>
-            <a class="navbar-item" href="{{ site.baseurl }}community/irc">IRC</a>
+            <a class="navbar-item" href="{{ site.baseurl }}community/slack">Slack</a>
             <a class="navbar-item" href="{{ site.baseurl }}community/contributing">Contributing</a>
             <a class="navbar-item" href="https://issues.apache.org/jira/projects/BOOKKEEPER">JIRA Issue Tracker</a>
           </div>
