remove '/' after baseurl

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -92,7 +92,7 @@
               </a>
             </p>
             <p class="control">
-              <a class="button is-primary" href="{{ site.baseurl }}/releases">
+              <a class="button is-primary" href="{{ site.baseurl }}releases">
                 <span class="icon">
                   <i class="fa fa-download"></i>
                 </span>
