--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -34,7 +34,7 @@
           <div class="navbar-dropdown is-boxed">
             {% for version in site.versions %}
             <a class="navbar-item" href="{{ site.baseurl }}docs/getting-started/installation">
-              Version {{version}}
+              Release {{version}}
               {% if version == site.latest %}<span class="tag is-success">LATEST</span>{% endif %}
             </a>
             {% endfor %}
@@ -45,6 +45,13 @@
               </span>
               Javadoc
             </a>
+            <hr class="dropdown-divider">
+            {% for version in site.archived_versions %}
+            <a class="navbar-item" href="{{ site.archived_releases_url }}{{version}}">
+              Release {{version}}
+              {% if version == site.stable_release %}<span class="tag is-success">Stable</span>{% endif %}
+            </a>
+            {% endfor %}
           </div>
         </div>
 
