ISSUE #344: add a releases page
Descriptions of the changes in this PR:

Add a releases page for keeping the history of apache releases.

Author: Sijie Guo <sijie@apache.org>

Reviewers: Luc Perkins <lucperkins@gmail.com>

This closes #345 from sijie/redirection_on_old_releases, closes #344

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -34,7 +34,7 @@
           <div class="navbar-dropdown is-boxed">
             {% for version in site.versions %}
             <a class="navbar-item" href="{{ site.baseurl }}docs/getting-started/installation">
-              Version {{version}}
+              Release {{version}}
               {% if version == site.latest %}<span class="tag is-success">LATEST</span>{% endif %}
             </a>
             {% endfor %}
@@ -45,6 +45,13 @@
               </span>
               Javadoc
             </a>
+            <hr class="dropdown-divider">
+            {% for version in site.archived_versions %}
+            <a class="navbar-item" href="{{ site.archived_releases_url }}{{version}}">
+              Release {{version}}
+              {% if version == site.stable_release %}<span class="tag is-success">Stable</span>{% endif %}
+            </a>
+            {% endfor %}
           </div>
         </div>
 
@@ -92,7 +99,7 @@
               </a>
             </p>
             <p class="control">
-              <a class="button is-primary" href="{{ site.baseurl }}docs/getting-started/installation#download">
+              <a class="button is-primary" href="{{ site.baseurl }}releases">
                 <span class="icon">
                   <i class="fa fa-download"></i>
                 </span>
