Fix the url after remove

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -38,7 +38,7 @@
           </a>
           {% endfor %}
           <hr class="dropdown-divider">
-          <a class="navbar-item" href="{{ site.baseurl }}javadoc">
+          <a class="navbar-item" href="{{ site.baseurl }}docs/latest/api/javadoc">
             <span class="icon bk-javadoc-icon">
               <img src="{{ site.baseurl }}img/java-icon.svg">
             </span>
