--- a/site/_includes/download-button.html
+++ b/site/_includes/download-button.html
@@ -2,5 +2,5 @@
   <span class="icon">
     <i class="fa fa-download"></i>
   </span>
-  <span>Download BookKeeper {{ site.bk_version }}</span>
+  <span>Download BookKeeper {{ site.latest_version }}</span>
 </a>
