--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -61,6 +61,8 @@
           <a class="navbar-item" href="{{ site.baseurl }}community/slack">Slack</a>
           <a class="navbar-item" href="{{ site.baseurl }}community/contributing">Contributing</a>
           <a class="navbar-item" href="https://issues.apache.org/jira/projects/BOOKKEEPER">JIRA Issue Tracker</a>
+          <hr class="dropdown-divider">
+          <a class="navbar-item" href="{{ site.baseurl }}community/release_guide">Release Guide</a>
         </div>
       </div>
 
