--- a/site/_includes/download-button.html
+++ b/site/_includes/download-button.html
@@ -1,6 +1,6 @@
-<a class="button is-primary" href="{{ site.baseurl }}docs/getting-started" download>
+<a class="button is-primary" href="{{ site.baseurl }}docs/latest/getting-started" download>
   <span class="icon">
     <i class="fa fa-download"></i>
   </span>
-  <span>Download BookKeeper {{ site.bk_version }}</span>
+  <span>Download BookKeeper {{ site.latest_version }}</span>
 </a>
