--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -31,20 +31,23 @@
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">Documentation</a>
         <div class="navbar-dropdown is-boxed">
-          {% for version in site.versions %}
-          <a class="navbar-item" href="{{ site.baseurl }}docs/getting-started/installation">
-            Release {{version}}
-            {% if version == site.latest %}<span class="tag is-success">LATEST</span>{% endif %}
+          <a class="navbar-item" href="{{ site.baseurl }}docs/latest/index.html">
+            Version {{ site.latest_version}}
+            <span class="tag is-warning">Development</span>
           </a>
-          {% endfor %}
-          <hr class="dropdown-divider">
-          <a class="navbar-item" href="{{ site.baseurl }}javadoc">
+          <a class="navbar-item" href="{{ site.baseurl }}docs/latest/api/javadoc">
             <span class="icon bk-javadoc-icon">
               <img src="{{ site.baseurl }}img/java-icon.svg">
             </span>
             Javadoc
           </a>
           <hr class="dropdown-divider">
+          {% for version in site.versions %}
+          <a class="navbar-item" href="{{ site.baseurl }}docs/{{version}}/index.html">
+            Release {{version}}
+            {% if version == site.stable_release %}<span class="tag is-success">Stable</span>{% endif %}
+          </a>
+          {% endfor %}
           {% for version in site.archived_versions %}
           <a class="navbar-item" href="{{ site.baseurl }}archives/docs/r{{version}}">
             Release {{version}}
