enable navbar burger on main page

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -19,7 +19,7 @@
     </a>
     -->
 
-    <div class="navbar-burger" data-target="bkNav">
+    <div class="navbar-burger burger" data-target="bkNav">
       <span></span>
       <span></span>
       <span></span>
