Issue 427: [website] sidebar doesn't work on documentation index page

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -31,7 +31,7 @@
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">Documentation</a>
         <div class="navbar-dropdown is-boxed">
-          <a class="navbar-item" href="{{ site.baseurl }}docs/latest/index.html">
+          <a class="navbar-item" href="{{ site.baseurl }}docs/latest/overview/overview">
             Version {{ site.latest_version}}
             <span class="tag is-warning">Development</span>
           </a>
@@ -43,7 +43,7 @@
           </a>
           <hr class="dropdown-divider">
           {% for version in site.versions %}
-          <a class="navbar-item" href="{{ site.baseurl }}docs/{{version}}/index.html">
+          <a class="navbar-item" href="{{ site.baseurl }}docs/{{version}}/overview/overview">
             Release {{version}}
             {% if version == site.stable_release %}<span class="tag is-success">Stable</span>{% endif %}
           </a>
