Issue 432: Add "Google Analytics" to the website

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -14,4 +14,7 @@
   </body>
 
   {% include javascript.html %}
+  {% if jekyll.environment == "production" %}
+  {% include google-analytics.html %}
+  {% endif %}
 </html>
