add release schedule and meeting links

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -63,6 +63,8 @@
           <a class="navbar-item" href="{{ site.baseurl }}community/mailing-lists">Mailing lists</a>
           <a class="navbar-item" href="{{ site.baseurl }}community/slack">Slack</a>
           <a class="navbar-item" href="https://github.com/apache/bookkeeper/issues">Github Issues</a>
+          <a class="navbar-item" href="{{ site.baseurl }}community/releases">Release Management</a>
+          <a class="navbar-item" href="{{ site.baseurl }}community/meeting">Community Meetings</a>
           <hr class="dropdown-divider">
           <a class="navbar-item" href="{{ site.baseurl }}community/contributing">Contribution Guide</a>
           <a class="navbar-item" href="{{ site.baseurl }}community/coding_guide">Coding Guide</a>
