--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -62,8 +62,16 @@
         <div class="navbar-dropdown is-boxed">
           <a class="navbar-item" href="{{ site.baseurl }}community/mailing-lists">Mailing lists</a>
           <a class="navbar-item" href="{{ site.baseurl }}community/slack">Slack</a>
-          <a class="navbar-item" href="{{ site.baseurl }}community/contributing">Contributing</a>
-          <a class="navbar-item" href="https://issues.apache.org/jira/projects/BOOKKEEPER">JIRA Issue Tracker</a>
+          <a class="navbar-item" href="https://github.com/apache/bookkeeper/issues">Github Issues</a>
+          <a class="navbar-item" href="{{ site.baseurl }}community/releases">Release Management</a>
+          <a class="navbar-item" href="{{ site.baseurl }}community/meeting">Community Meetings</a>
+          <hr class="dropdown-divider">
+          <a class="navbar-item" href="{{ site.baseurl }}community/contributing">Contribution Guide</a>
+          <a class="navbar-item" href="{{ site.baseurl }}community/coding_guide">Coding Guide</a>
+          <a class="navbar-item" href="{{ site.baseurl }}community/issue-report">Issue Report Guide</a>
+          <hr class="dropdown-divider">
+          <a class="navbar-item" href="{{ site.baseurl }}community/presentations">Presentations</a>
+          <a class="navbar-item" href="https://cwiki.apache.org/confluence/display/BOOKKEEPER/BookKeeper+Proposals">BookKeeper Proposals</a>
         </div>
       </div>
 
