ISSUE #304: New Release Guide
Descriptions of the changes in this PR:

This is an attempt to improve the current release guide base on a few references :  [Beam](https://beam.apache.org/contribute/release-guide/) [Pulsar](https://github.com/apache/incubator-pulsar/wiki/Release-process)

Add this in main repo for reviews. We can later on make it part of website once #293 is completed.

A few items are TBD. comments are welcome.

Author: Sijie Guo <sijie@apache.org>

Reviewers: Enrico Olivelli <eolivelli@gmail.com>, Jia Zhai <None>

This closes #305 from sijie/release_guide, closes #304

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -69,6 +69,7 @@
           <a class="navbar-item" href="{{ site.baseurl }}community/contributing">Contribution Guide</a>
           <a class="navbar-item" href="{{ site.baseurl }}community/coding_guide">Coding Guide</a>
           <a class="navbar-item" href="{{ site.baseurl }}community/issue-report">Issue Report Guide</a>
+          <a class="navbar-item" href="{{ site.baseurl }}community/release_guide">Release Guide</a>
           <hr class="dropdown-divider">
           <a class="navbar-item" href="{{ site.baseurl }}community/presentations">Presentations</a>
           <a class="navbar-item" href="https://cwiki.apache.org/confluence/display/BOOKKEEPER/BookKeeper+Proposals">BookKeeper Proposals</a>
