--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -1,23 +1,13 @@
 {% capture docs_url %}{{ site.baseurl }}docs/{% endcapture %}
 <nav class="navbar bk-topnav">
+  <a class="navbar-brand bk-brand" href="{{ site.baseurl }}">
+    <img src="{{ site.baseurl }}img/logos/bk-logo-with-tm.png" style="max-height: 80px; width: auto;">
+  </a>
+  <!--
   <div class="navbar-brand">
     <a class="navbar-item bk-brand" href="{{ site.baseurl }}">
-      {{ site.title }}
+      <img src="{{ site.baseurl }}img/logos/bk-logo-with-tm.png" style="height: 40px;">
     </a>
-
-    <!--
-    <a class="navbar-item is-hidden-desktop bk-github" href="{{ site.github_repo }}" target="_blank">
-      <span class="icon">
-        <i class="fa fa-github"></i>
-      </span>
-    </a>
-
-    <a class="navbar-item is-hidden-desktop bk-twitter" href="https://twitter.com/jgthms" target="_blank">
-      <span class="icon">
-        <i class="fa fa-twitter"></i>
-      </span>
-    </a>
-    -->
 
     <div class="navbar-burger burger" data-target="bkNav">
       <span></span>
@@ -25,6 +15,7 @@
       <span></span>
     </div>
   </div>
+  -->
 
   <div id="bkNav" class="navbar-menu">
     <div class="navbar-start">
