revert the header

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -1,12 +1,8 @@
 {% capture docs_url %}{{ site.baseurl }}docs/{% endcapture %}
 <nav class="navbar bk-topnav">
-  <a class="navbar-brand bk-brand" href="{{ site.baseurl }}">
-    <img src="{{ site.baseurl }}img/logos/bk-logo-with-tm.png" style="max-height: 80px; width: auto;">
-  </a>
-  <!--
   <div class="navbar-brand">
     <a class="navbar-item bk-brand" href="{{ site.baseurl }}">
-      <img src="{{ site.baseurl }}img/logos/bk-logo-with-tm.png" style="height: 40px;">
+      {{ site.title }}
     </a>
 
     <div class="navbar-burger burger" data-target="bkNav">
@@ -15,7 +11,6 @@
       <span></span>
     </div>
   </div>
-  -->
 
   <div id="bkNav" class="navbar-menu">
     <div class="navbar-start">
