BP-20: Github workflow for bookkeeper proposals

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -58,7 +58,7 @@
           <a class="navbar-item" href="{{ site.baseurl }}community/release_guide">Release Guide</a>
           <hr class="dropdown-divider">
           <a class="navbar-item" href="{{ site.baseurl }}community/presentations">Presentations</a>
-          <a class="navbar-item" href="https://cwiki.apache.org/confluence/display/BOOKKEEPER/BookKeeper+Proposals">BookKeeper Proposals</a>
+          <a class="navbar-item" href="{{ site.baseurl }}community/bookkeeper_proposals">BookKeeper Proposals</a>
         </div>
       </div>
 
