--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -54,6 +54,7 @@
           <hr class="dropdown-divider">
           <a class="navbar-item" href="{{ site.baseurl }}community/contributing">Contribution Guide</a>
           <a class="navbar-item" href="{{ site.baseurl }}community/coding_guide">Coding Guide</a>
+          <a class="navbar-item" href="{{ site.baseurl }}community/testing">Testing Guide</a>
           <a class="navbar-item" href="{{ site.baseurl }}community/issue-report">Issue Report Guide</a>
           <a class="navbar-item" href="{{ site.baseurl }}community/release_guide">Release Guide</a>
           <hr class="dropdown-divider">
